--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,13 @@
     "app/**": {
       "maxDuration": 30
     }
+  },
+  "env": {
+    "NEXT_PUBLIC_SUPABASE_URL": "@supabase-url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase-anon-key",
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase-service-role-key",
+    "NEXT_PUBLIC_GOOGLE_CLIENT_ID": "@google-client-id",
+    "GOOGLE_CLIENT_SECRET": "@google-client-secret",
+    "NEXT_PUBLIC_APP_URL": "@app-url"
   }
 }
